--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -133,6 +133,16 @@ on boot
     chown root system /sys/class/leds/red/blink
     chown root system /sys/class/leds/green/blink
     chown root system /sys/class/leds/blue/blink
+    chmod 0666 /sys/class/leds/red/blink 
+    chmod 0666 /sys/class/leds/green/blink
+    chmod 0666 /sys/class/leds/blue/blink 
+    chmod 0666 /sys/class/leds/white/blink
+    chmod 0666 /sys/class/leds/red/brightness 
+    chmod 0666 /sys/class/leds/green/brightness 
+    chmod 0666 /sys/class/leds/blue/brightness 
+    chmod 0666 /sys/class/leds/white/brightness 	
+ # Vibrator
+     chmod 0666 /sys/class/timed_output/vibrator/enable 
 
 # msm specific files that need to be created on /data
 on post-fs-data
@@ -285,6 +295,30 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wdsp0/boot
     # CPE fw_name used by sound trigger HAL
     chown media audio /sys/kernel/wcd_cpe0/fw_name
+# Torch (seeing nothing, nothing but myself.. and i'm the one with a lighter) 
+chmod 0666 /sys/class/leds/led:switch/brightness 
+chmod 0666 /sys/class/leds/torch-light0/brightness 
+chmod 0666 /sys/class/leds/torch-light1/brightness
+chmod 0666 /sys/class/leds/red/blink 
+chmod 0666 /sys/class/leds/green/blink 
+chmod 0666 /sys/class/leds/blue/blink 
+chmod 0666 /sys/class/leds/white/blink 
+chmod 0666 /sys/class/leds/red/brightness 
+chmod 0666 /sys/class/leds/green/brightness 
+chmod 0666 /sys/class/leds/blue/brightness
+chmod 0666 /sys/class/leds/white/brightness 
+chmod 0666 /sys/class/timed_output/vibrator/enable 
+chmod 0666 /sys/class/backlight/panel/auto_brightness 
+# GPS 
+setprop custom.location.testing true
+# wlan/bt init 	
+start init_wlan_bt 
+
+service init_wlan_bt /system/bin/sh /system/etc/init_hcismd_up.sh 
+class main 
+user root 
+group root 
+oneshot
 
 on property:vold.decrypt=trigger_restart_framework
     start config_bt_addr
@@ -336,7 +370,7 @@ service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     oneshot
 
 on property:bluetooth.hciattach=true
-    start hciattach
+  #  start hciattach
 
 # FM
 on property:hw.fm.init=0
@@ -464,7 +498,7 @@ on property:persist.sys.fp.onstart=1
 on property:ro.boot.fpsensor=gdx
     setprop ro.hardware.fingerprint goodix
 
-service time_daemon /system/bin/time_daemon
-    class main
-    user root
-    group root
+#service time_daemon /system/bin/time_daemon
+   # class main
+  #  user root
+   # group root
