--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -74,7 +74,8 @@ service qseecomd /system/bin/qseecomd
     class core
     user root
     group root
-
+    disabled
+    
 service thermal-engine /system/vendor/bin/thermal-engine
     class main
     user root
